--- a/SASpy.ipynb
+++ b/SASpy.ipynb
@@ -158,7 +158,7 @@
       },
       "source": [
         "from getpass import getpass\n",
-        "#cfg='oda user '+input('email: ')+' password '+getpass('pass')\n",
+        "cfg='oda user '+input('email: ')+' password '+getpass('pass')\n",
         "\n",
         "with open('/root/.authinfo', \"w\") as text_file:\n",
         "  text_file.write(cfg)\n",
