--- a/MapaAstral.ipynb
+++ b/MapaAstral.ipynb
@@ -742,16 +742,16 @@
     {
       "cell_type": "code",
       "source": [
-        "dia = 5\n",
-        "mes = 7\n",
-        "ano = 1986\n",
-        "hora = 22\n",
-        "minuto = 0\n",
+        "dia = 1\n",
+        "mes = 1\n",
+        "ano = 2000\n",
+        "hora = 1\n",
+        "minuto = 1\n",
         "gmt = -3  # tz_str='America/Sao_Paulo\n",
         "lat = -23.5505\n",
         "lon = -46.6333\n",
         "city = \"São Paulo\"\n",
-        "nome = \"Helayne\"\n",
+        "nome = \"Pessoa\"\n",
         "\n",
         "mapa(nome, dia,mes,ano,hora,minuto,lat,lon, city=city)"
       ],
